# cpp-modules

colorline/: CMakeLists.txt  README.md
colorline/include/: colorline.hpp
colorline/src/: colorline.cppm  main.cpp
terminal_utils/: CMakeLists.txt  README.md
terminal_utils/include/: terminal_utils.h
terminal_utils/src/: main.cpp  terminal_utils.cpp
